--- a/Amex.CCApplication.DataAccess/Amex.CCA.DataAccess.csproj
+++ b/Amex.CCApplication.DataAccess/Amex.CCA.DataAccess.csproj
@@ -207,6 +207,38 @@
     <Compile Include="Migrations\201709181511128_createuserprofile2.Designer.cs">
       <DependentUpon>201709181511128_createuserprofile2.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201709190714491_userprofiledbupdate.cs" />
+    <Compile Include="Migrations\201709190714491_userprofiledbupdate.Designer.cs">
+      <DependentUpon>201709190714491_userprofiledbupdate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201709190730141_userprofiledbupdate1.cs" />
+    <Compile Include="Migrations\201709190730141_userprofiledbupdate1.Designer.cs">
+      <DependentUpon>201709190730141_userprofiledbupdate1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201709190739405_uodate3.cs" />
+    <Compile Include="Migrations\201709190739405_uodate3.Designer.cs">
+      <DependentUpon>201709190739405_uodate3.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201709190741361_updatedbfortable.cs" />
+    <Compile Include="Migrations\201709190741361_updatedbfortable.Designer.cs">
+      <DependentUpon>201709190741361_updatedbfortable.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201709190748119_updatedbfortable1.cs" />
+    <Compile Include="Migrations\201709190748119_updatedbfortable1.Designer.cs">
+      <DependentUpon>201709190748119_updatedbfortable1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201709190748479_updatedbfortable2.cs" />
+    <Compile Include="Migrations\201709190748479_updatedbfortable2.Designer.cs">
+      <DependentUpon>201709190748479_updatedbfortable2.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201709190933464_InitialCreate.cs" />
+    <Compile Include="Migrations\201709190933464_InitialCreate.Designer.cs">
+      <DependentUpon>201709190933464_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201709190934523_updatedbsomehow.cs" />
+    <Compile Include="Migrations\201709190934523_updatedbsomehow.Designer.cs">
+      <DependentUpon>201709190934523_updatedbsomehow.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="NationalityDataAccessHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -318,6 +350,30 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201709181511128_createuserprofile2.resx">
       <DependentUpon>201709181511128_createuserprofile2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201709190714491_userprofiledbupdate.resx">
+      <DependentUpon>201709190714491_userprofiledbupdate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201709190730141_userprofiledbupdate1.resx">
+      <DependentUpon>201709190730141_userprofiledbupdate1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201709190739405_uodate3.resx">
+      <DependentUpon>201709190739405_uodate3.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201709190741361_updatedbfortable.resx">
+      <DependentUpon>201709190741361_updatedbfortable.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201709190748119_updatedbfortable1.resx">
+      <DependentUpon>201709190748119_updatedbfortable1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201709190748479_updatedbfortable2.resx">
+      <DependentUpon>201709190748479_updatedbfortable2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201709190933464_InitialCreate.resx">
+      <DependentUpon>201709190933464_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201709190934523_updatedbsomehow.resx">
+      <DependentUpon>201709190934523_updatedbsomehow.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
