--- a/Amex.CCA.WebClient/app/package.json
+++ b/Amex.CCA.WebClient/app/package.json
@@ -22,9 +22,9 @@
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
     "bootstrap": "^3.3.7",
+    "bootstrap-4": "^4.0.0",
     "core-js": "^2.4.1",
-    "glyphicons": "^0.2.0",
-    "glyphicons-halflings": "^1.9.0",
+    "jquery": "^3.2.1",
     "rxjs": "^5.4.2",
     "zone.js": "^0.8.14"
   },
