--- a/Amex.CCA.WebApi/Web.config
+++ b/Amex.CCA.WebApi/Web.config
@@ -8,12 +8,21 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     <section name="oracle.manageddataaccess.client" type="OracleInternal.Common.ODPMSectionHandler, Oracle.ManagedDataAccess, Version=4.122.1.0, Culture=neutral, PublicKeyToken=89b483f429c47342" />
+    <section name="notificationManagerSettings" type="System.Configuration.NameValueSectionHandler"/>
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" providerName="Oracle.ManagedDataAccess.Client" connectionString="DATA SOURCE=ti-oracle01.sl.tiqri.com:1521/tiqri.sl.tiqri.com;USER ID=AmexCCDB;Password=amexccdb" />
     <!--<add name="DefaultConnection" providerName="Oracle.ManagedDataAccess.Client" connectionString="DATA SOURCE=localhost:1521/xe;USER ID=test2;Password=test2" />-->    
   </connectionStrings>
   <appSettings></appSettings>
+  <notificationManagerSettings>
+    <add key="smtpHost" value="smtp.gmail.com"/>
+    <add key="smtpPort" value="25"/>
+    <add key="smtpUserName" value="amexccapp@gmail.com"/>
+    <add key="smtpPassword" value=""/>
+    <add key="useSmtpCredentials" value="false"/>
+    <add key="defaultEmailSender" value="amexccapp@gmail.com"/>
+  </notificationManagerSettings>
   <system.web>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.6.1" />
