email configs updated

--- a/Amex.CCA.WebApi/Web.config
+++ b/Amex.CCA.WebApi/Web.config
@@ -19,7 +19,7 @@
     <add key="smtpHost" value="smtp.gmail.com"/>
     <add key="smtpPort" value="25"/>
     <add key="smtpUserName" value="amexccapp@gmail.com"/>
-    <add key="smtpPassword" value=""/>
+    <add key="smtpPassword" value="1Qaz2wsx@"/>
     <add key="useSmtpCredentials" value="false"/>
     <add key="defaultEmailSender" value="amexccapp@gmail.com"/>
   </notificationManagerSettings>
