--- a/Amex.CCApplication.DataAccess/Amex.CCA.DataAccess.csproj
+++ b/Amex.CCApplication.DataAccess/Amex.CCA.DataAccess.csproj
@@ -239,6 +239,14 @@
     <Compile Include="Migrations\201709190934523_updatedbsomehow.Designer.cs">
       <DependentUpon>201709190934523_updatedbsomehow.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201709221123425_test.cs" />
+    <Compile Include="Migrations\201709221123425_test.Designer.cs">
+      <DependentUpon>201709221123425_test.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201709221125595_test2.cs" />
+    <Compile Include="Migrations\201709221125595_test2.Designer.cs">
+      <DependentUpon>201709221125595_test2.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="NationalityDataAccessHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -374,6 +382,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201709190934523_updatedbsomehow.resx">
       <DependentUpon>201709190934523_updatedbsomehow.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201709221123425_test.resx">
+      <DependentUpon>201709221123425_test.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201709221125595_test2.resx">
+      <DependentUpon>201709221125595_test2.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
