--- a/Amex.CCA.WebApi/Web.config
+++ b/Amex.CCA.WebApi/Web.config
@@ -13,7 +13,10 @@
     <add name="DefaultConnection" providerName="Oracle.ManagedDataAccess.Client" connectionString="DATA SOURCE=ti-oracle01.sl.tiqri.com:1521/tiqri.sl.tiqri.com;USER ID=AmexCCDB;Password=amexccdb" />
     <!--<add name="DefaultConnection" providerName="Oracle.ManagedDataAccess.Client" connectionString="DATA SOURCE=localhost:1521/xe;USER ID=test2;Password=test2" />-->    
   </connectionStrings>
-  <appSettings></appSettings>
+  <appSettings>
+    <add key="baseUri" value="http://localhost:8947"></add>
+    <add key="imgPath" value="Asserts"/>
+  </appSettings>
   <system.web>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.6.1" />
