Card status changes

--- a/Amex.CCA.Common/Amex.CCA.Common.csproj
+++ b/Amex.CCA.Common/Amex.CCA.Common.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Enums\Enums.cs" />
     <Compile Include="NotificationUtility\Email.cs" />
     <Compile Include="NotificationUtility\NotificationManager.cs" />
     <Compile Include="NotificationUtility\NotificationResult.cs" />
