--- a/Amex.CCApplication.DataAccess/Amex.CCA.DataAccess.csproj
+++ b/Amex.CCApplication.DataAccess/Amex.CCA.DataAccess.csproj
@@ -446,6 +446,12 @@
       <DependentUpon>201709280711325_reviwerComment.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Amex.CCA.Common\Amex.CCA.Common.csproj">
+      <Project>{18863f8d-c7bf-439c-8213-5fbc9a9b62c5}</Project>
+      <Name>Amex.CCA.Common</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
