Attachment Type retrival issue fixed.

--- a/Amex.CCA.BusinessServices/Amex.CCA.BusinessServices.csproj
+++ b/Amex.CCA.BusinessServices/Amex.CCA.BusinessServices.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AttachmentTypesBusinessService.cs" />
     <Compile Include="BusinessModelMapper.cs" />
     <Compile Include="BusinessModels\AttachmentTypeEntity.cs" />
     <Compile Include="BusinessModels\CardTypeEntity.cs" />
