--- a/Amex.CCApplication.DataAccess/Amex.CCA.DataAccess.csproj
+++ b/Amex.CCApplication.DataAccess/Amex.CCA.DataAccess.csproj
@@ -57,6 +57,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AttachmentTypeDataAccessHelper.cs" />
     <Compile Include="CardStatusDataAccessHelper.cs" />
     <Compile Include="CardTypeDataAccessHelper.cs" />
     <Compile Include="CreditCardDataAccessHelper.cs" />
