--- a/Amex.CCA.WebClient/Amex.CCA.WebClient.csproj
+++ b/Amex.CCA.WebClient/Amex.CCA.WebClient.csproj
@@ -191,6 +191,7 @@
     <TypeScriptCompile Include="app\src\app\login\login.component.ts" />
     <TypeScriptCompile Include="app\src\app\login\login.module.ts" />
     <TypeScriptCompile Include="app\src\app\models\attachments.ts" />
+    <TypeScriptCompile Include="app\src\app\models\attachmentsView.ts" />
     <TypeScriptCompile Include="app\src\app\models\cardtype.ts" />
     <TypeScriptCompile Include="app\src\app\models\creditcard.ts" />
     <TypeScriptCompile Include="app\src\app\models\nationality.ts" />
